--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: 'https://cvlab-unibo.github.io'
 baseurl:
 
 # Title of the Site
-title: Deep Scene Understanding From Images
+title: Deep Scene Understanding from Images for Monitoring Applications
 # Description of the Site
 description: a PhD Course by Matteo Poggi, Fabio Tosi, and Pierluigi Zama Ramirez <br> <br> CVLab, University of Bologna
 # URL of Image of the Site
@@ -27,7 +27,7 @@ facebook_username:
 twitter_username:
 instagram_username:
 linkedin_username:
-github_username:  pierlui92/deep_scene_understanding_from_images
+github_username:  pierlui92/deep_scene_understanding_from_images_for_monitoring_applications
 youtube_channel_id: 
 reddit_username:
 behance_username:
